[gd_scene load_steps=3 format=2]

[ext_resource path="res://logic/LogicGraphCreator.gd" type="Script" id=1]
[ext_resource path="res://logic/LogicStartNode.tscn" type="PackedScene" id=2]

[node name="DialogueGraphCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 20.0

[node name="AddDialogueButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 97.0
margin_bottom = 20.0
text = "Add Dialogue"

[node name="AddSetValueButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 101.0
margin_right = 201.0
margin_bottom = 20.0
text = "Add Set Value"

[node name="AddConditionButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 205.0
margin_right = 307.0
margin_bottom = 20.0
text = "Add Condition"

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogicStartNode" parent="VBoxContainer/GraphEdit" instance=ExtResource( 2 )]
mouse_filter = 1
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddDialogueButton" to="." method="_on_AddDialogueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddSetValueButton" to="." method="_on_AddSetValueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddConditionButton" to="." method="_on_AddConditionButton_pressed"]
[connection signal="connection_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="delete_nodes_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
